--- a/TFG.html
+++ b/TFG.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,16 +10,6 @@
 	<script type="text/javascript" id="fuente">
 
 	var
-	//// Variables globales del canvas
-	// Estas variables que están comentadas las cogí del código que me proporcionaste.
-	// Pero puesto que con las dos últimas funciona bien lo he dejado así.
-	/*ctx,
-	ctx_doc,
-	ctx_aux,
-	canv_doc,
-	canv_aux,
-	tcx,
-	tcy,*/
 	canvas = document.getElementById('canvas1'),
 	ctx = canvas.getContext('2d'),
 
@@ -41,14 +29,14 @@
 	var p = 6, q = 4, 		// parámetros p y q
 	nLayers = 1;			// Capas a dibujar
 
-	var				//// Create ReflectEdgeBisector
+	var										//// Create ReflectEdgeBisector
 	RB1 = [1,0,0],
 	RB2 = [0,-1,0],
 	RB3 = [0,0,1];
 
-	ReflectEdgeBisector = [RB1, RB2, RB3];	//// End creation	/// ReflectQ para 1986
+	ReflectEdgeBisector = [RB1, RB2, RB3];	//// End creation		/// ReflectQ para 1986
 
-	cosh_b = Math.cos(Math.PI / q) / Math.sin(Math.PI / p);		//// Create ReflectPgonEdge
+	cosh_b = Math.cos(Math.PI / q) / Math.sin(Math.PI / p);			//// Create ReflectPgonEdge
 
 	var
 	cosh_2b = 2 * cosh_b * cosh_b - 1,
@@ -57,54 +45,40 @@
 	RPE2 = [0, 1, 0],
 	RPE3 = [-sinh_2b, 0, cosh_2b];
 
-	ReflectPgonEdge = [RPE1, RPE2, RPE3];						//// End creation	/// ReflectP para el 1986
+	ReflectPgonEdge = [RPE1, RPE2, RPE3];					//// End creation		/// ReflectP para el 1986
 
-	var										/// Create ReflectHypotenuse
+	var									/// Create ReflectHypotenuse
 	RH1 = [Math.cos(2 * Math.PI / p), Math.sin(2 * Math.PI / p), 0],
 	RH2 = [Math.sin(2 * Math.PI / p), - Math.cos(2 * Math.PI / p), 0],
 	RH3 = [0, 0, 1];
 
-	ReflectHypotenuse = [RH1, RH2, RH3];						/// End creation	// Reflect2 para 1986
+	ReflectHypotenuse = [RH1, RH2, RH3];					/// End creation		// Reflect2 para 1986
 
 
-	RotateP = matrixproduct(ReflectHypotenuse, ReflectEdgeBisector);				// 2 * Q
-	RotateQ = matrixproduct(ReflectPgonEdge, ReflectHypotenuse);				// P * 2
+	RotateP = matrixproduct(ReflectHypotenuse, ReflectEdgeBisector);		// 2 * Q
+	RotateQ = matrixproduct(ReflectPgonEdge, ReflectHypotenuse);			// P * 2
 	//RotateEdge = matrixproduct(ReflectPgonEdge, ReflectEdgeBisector);		// RotateEdge 1981 (este no está en 1986)
-
 
 
 	 ///
 	 // Definición de los vectores X, Y y Action
 	 ///
 
-	 var puntos = {x0: 2.7, y0: -1.3, x1: 4.5, y1: -0.45,
-		       x2: 5.4, y2: 2, x3: 4.9, y3: 1.75,
-		       x4: 2.49, y4: 1.85, x5: 2.4, y5:.8},
-	    centro = {x: 600, y: 350},
-	    centro0 = {x: 0, y: 0},				/// Centrar las rotaciones en el centro
-	    escala = 20;
+	 var puntos = {x0: 2.7/3, y0: -1.3/3, x1: 4.5/3, y1: -0.45/3,
+	 	       x2: 5.4/3, y2: 2/3, x3: 4.9/3, y3: 1.75/3,
+	 	       x4: 2.49/3, y4: 1.85/3, x5: 2.4/3, y5:.8/3},
+	 	 centro = {x: 600, y: 350},
+	 	 centro0 = {x: 0, y: 0},				/// Centrar las rotaciones en el centro
+	 	 escala = 50;
 
 // Enlace de Geogebra para ver los puntos originales
 // https://www.geogebra.org/geometry/wcx98k6u
 
-		// Los vectores X e Y toman los puntos que están definidos en Geogebra, les aplica la escala y los traslada al centro
- 	 var /*X = [linealTransformation(puntos.x0, escala, centro.x), linealTransformation(puntos.x1, escala, centro.x),
-		 				linealTransformation(puntos.x2, escala, centro.x), linealTransformation(puntos.x3, escala, centro.x),
-		 				linealTransformation(puntos.x4, escala, centro.x), linealTransformation(puntos.x5, escala, centro.x)],
- 	     Y = [linealTransformation(puntos.y0, escala, centro.y), linealTransformation(puntos.y1, escala, centro.y),
-		 	 			linealTransformation(puntos.y2, escala, centro.y), linealTransformation(puntos.y3, escala, centro.y),
-		 				linealTransformation(puntos.y4, escala, centro.y), linealTransformation(puntos.y5, escala, centro.y)],*/
- 	 Action = ["Move", "Draw", "Draw", "Draw", "Move", "Draw" ],
-	 X = [puntos.x0, puntos.x1, puntos.x2, puntos.x3, puntos.x4, puntos.x5],
-	 Y = [puntos.y0, puntos.y1, puntos.y2, puntos.y3, puntos.y4, puntos.y5];
+// Los vectores X e Y toman los puntos que están definidos en Geogebra, les aplica la escala y los traslada al centro
+ 	 var    Action = ["Move", "Draw", "Draw", "Draw", "Move", "Draw" ],
+		X = [puntos.x0, puntos.x1, puntos.x2, puntos.x3, puntos.x4, puntos.x5],
+		Y = [puntos.y0, puntos.y1, puntos.y2, puntos.y3, puntos.y4, puntos.y5];
 
-	  // es mejor que definir 'Action' siempre con la misma longitud que 'X' e 'Y', y hacer siempre tres push paralelos en las tres
-
- 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw", "Black"];
 
 	//**********************************************************************
 	// Hace una transformacion lineal
@@ -174,86 +148,6 @@
 		return elem ;
 	}
 
-	//**********************************************************************
-
-	// Esta función no se utiliza ahora mismo, las definiciones están hechas de forma global.
-
-	/*function inicialice( p, q ){
-	canv_doc = elementoHTML("canvas1");
-
-	ctx_doc = canv_doc.getContext("2d");
-
-	if (!ctx_doc){
-		alert("error: la llamada a canv_doc.getContext(\"2d\") no está soportada o no ha funcionado.");
-		exit();
-		}
-
-	tcx = canv_doc.width,		/// Tamaño del canvas en la X
-	tcy = canv_doc.height;		/// Tamaño del canvas en la Y
-
-
-	canv_aux = document.createElement('canvas');
-
-	if (!canv_aux){
-		alert("error: la llamada a document.createElement('canvas') no está soportada o no ha funcionado.");
-		exit();
-		}
-
-	canv_aux.width = tcx;
-	canv_aux.height = tcy;
-
-	ctx_aux = canv_aux.getContext('2d');
-
-	if (!canv_aux){
-		alert("error: la llamada a canv_aux.getContext('2d') no está soportada o no ha funcionado.");
-		exit();
-		}
-
-	// Se dibuja en el canvas auxiliar.
-	ctx = ctx_aux;
-
-
-
-	var							//// Create ReflectEdgeBisector
-	RB1 = [1,0,0],
-	RB2 = [0,-1,0],
-	RB3 = [0,0,1];
-
-
-	ReflectEdgeBisector = [RB1,RB2,RB3];	//// End creation
-
-
-
-	cosh_b = Math.cos(Math.PI / q) / Math.sin(Math.PI / p);		//// Create ReflectPgonEdge
-
-	var
-	cosh_2b = 2 * cosh_b * cosh_b - 1,
-	sinh_2b = Math.sqrt(cosh_b * cosh_b - 1),
-	RPE1 = [-cosh_2b, 0, sinh_2b],
-	RPE2 = [0, 1, 0],
-	RPE3 = [-sinh_2b, 0, cosh_2b];
-
-	ReflectPgonEdge = [RPE1, RPE2, RPE3];						//// End creation
-
-	//console.log("cos2 = " + cosh_2b);
-	//console.log("sin = " + sinh_2b);
-	//console.log("cosh_b: " + cosh_b);
-
-
-	var									/// Create ReflectHypotenuse
-	RH1 = [Math.cos(2 / p), Math.sin(2 / p), 0],
-	RH2 = [Math.sin(2 / p), -Math.cos(2 / p), 0],
-	RH3 = [0, 0, 1];
-
-	ReflectHypotenuse = [RH1, RH2, RH3];						/// End creation
-
-
-	RotateP = matrixproduct(ReflectEdgeBisector, ReflectHypotenuse);
-	RotateQ = matrixproduct(ReflectHypotenuse, ReflectPgonEdge);
-	RotateEdge = matrixproduct(ReflectPgonEdge, ReflectEdgeBisector);
-
-}*/
-
 	//*******************************************************************************************
 
 	function DrawPgonPattern(transformation){
@@ -263,26 +157,30 @@
 
 		for (i = 0; i < Action.length /*nPgonActions*/; i++){
 			//console.log("iteracion: " + i);
-			if (Action[i] != "Black"){				// Ahora mismo el único color que hay es Negro
+			if (Action[i] != "Black"){							// Ahora mismo el único color que hay es Negro
 				/*SumSquare = X[i] * X[i] + Y[i] * Y[i];
 
 				let Z = [[2 * X[i] / (1 - SumSquare)],
 					[2 * Y[i] / (1 - SumSquare)],
 					[(1 + SumSquare) / (1 - SumSquare)]];
 
-				Z = matrixproduct(transformation, Z);			/// Desde debajo del if (Action[i] != "Black") está en el artículo de 1981*/
+				Z = matrixproduct(transformation, Z);				/// Desde debajo del if (Action[i] != "Black") está en el artículo de 1981*/
 
-				let coordinates = [[X[i]], [Y[i]], [0]];
-				let Z = matrixproduct(transformation, coordinates);		/// Estas dos líneas están en el artículo de 1986
+				//let poicareCoordinates = [[X[i]], [Y[i]], [0]];							///
+				let weierstrassCoordinates = [[(2 * X[i]) / (1 - X[i] * X[i] - Y[i] * Y[i])],
+							      [(2 * Y[i]) / (1 - X[i] * X[i] - Y[i] * Y[i])],
+							      [(1 + X[i] * X[i] + Y[i] * Y[i]) / (1 - X[i] * X[i] - Y[i] * Y[i])]];
+				let Z = matrixproduct(transformation, weierstrassCoordinates);		/// Estas dos líneas están en el artículo de 1986
 
 				Tx = Z[0][0] / (1 + Z[2][0]);
 				Ty = Z[1][0] / (1 + Z[2][0]);
+
 
 				//console.log("Tx: " + Tx);
 				//console.log("Ty: " + Ty);  // CUA: hago log de 'moveTo' en lugar de 'lineTo'
 
 				Tx = linealTransformation(Tx, escala, centro.x);
-			  	Ty = linealTransformation(Ty, escala, centro.y);
+				Ty = linealTransformation(Ty, escala, centro.y);
 			}
 
 			switch(Action[i]){
@@ -335,7 +233,7 @@
 		let
 		//RotateCenter,
 		//RotateVertex,
-		//Tr,						/// Esta variable está definida en el artículo de 1981
+		//Tr,					/// Esta variable está definida en el artículo de 1981
 		i, j,
 		ExposedEdges = 0,
 		PgonsPerVertex = 0;
@@ -357,23 +255,23 @@
 				matrixproduct(RotateP, RotateP));				//// InitialTransformation * RotateP ** 2
 			}
 
-			/*RotateCenter = matrixproduct(						///RotateP * RotateP * InitialTransformation
-				matrixproduct(RotateP, RotateP),				/// Esto está en el artículo de 1981
+			/*RotateCenter = matrixproduct(				///RotateP * RotateP * InitialTransformation
+				matrixproduct(RotateP, RotateP),		/// Esto está en el artículo de 1981
 				InitialTransformation);*/
 
 			for (i = 0; i < ExposedEdges; i++){
-				//Tr = matrixproduct(RotateEdge, RotateCenter);			/// Esto está en el artículo de 1981
+				//Tr = matrixproduct(RotateEdge, RotateCenter);					/// Esto está en el artículo de 1981
 				RotateVertex = matrixproduct(RotateCenter, RotateQ);		/// Esto está en el artículo de 1986
 
-				//ReplicatePatern(Tr, Layerdiff - 1, "Edge");			/// Esto está en el artículo de 1981
-				ReplicatePatern(RotateVertex, Layerdiff - 1, "Edge");		/// Esto está en el artículo de 1986
+				//ReplicatePatern(Tr, Layerdiff - 1, "Edge");								/// Esto está en el artículo de 1981
+				ReplicatePatern(RotateVertex, Layerdiff - 1, "Edge");				/// Esto está en el artículo de 1986
 
-				//RotateCenter = matrixproduct(RotateP, RotateCenter);		/// Esto está en el artículo de 1981
+				//RotateCenter = matrixproduct(RotateP, RotateCenter);			/// Esto está en el artículo de 1981
 
-				if (i < ExposedEdges - 1)					//// El -1 es para compensar que la i empieza en 0
+				if (i < ExposedEdges - 1)									//// El -1 es para compensar que la i empieza en 0
 					PgonsPerVertex = q - 3;
 
-				else if (i == ExposedEdges - 1)					//// El -1 es para compensar que la i empieza en 0
+				else if (i == ExposedEdges - 1)						//// El -1 es para compensar que la i empieza en 0
 					PgonsPerVertex = q - 4;
 
 				RotateVertex = matrixproduct(RotateQ, RotateP);
@@ -388,7 +286,7 @@
 			}*/
 
 			for(j = 0; j < PgonsPerVertex; j++){
-				RotateVertex = matrixproduct(RotateVertex, RotateQ);	
+				RotateVertex = matrixproduct(RotateVertex, RotateQ);
 				ReplicatePatern(RotateVertex,
 					Layerdiff - 1,
 					"Vertex");
@@ -399,63 +297,6 @@
 			}
 		}
 	}
-
-	//*******************************************************************************************
-	// Esta función es para probar pintar normal, funciona bien
-	// No se usa ahora mismo
-
-	/*function draw(){
-		var canvas = document.getElementById('canvas1');
-		var prueba = ["Move", "Draw1", "Draw2", "Black", "Move1", "Draw3", "Red"];
-
-		if(canvas.getContext){
-			var ctx = canvas.getContext('2d');
-
-			ctx.beginPath();
-			for (var i = 0; i < prueba.length; i++){
-				switch(prueba[i]){														////
-					case "Move":
-						ctx.moveTo(350, 350);
-						break;
-
-					case "Move1":
-						ctx.moveTo(600, 600);
-						break;
-
-					case "Draw1":
-						ctx.lineTo(100, 200);
-						break;
-
-					case "Black":
-						ctx.strokeStyle = "Black";		//Pinta los bordes del polígono
-						ctx.stroke();	/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
-						break;
-
-					case "Red":
-						ctx.strokeStyle = "Red";		//Pinta los bordes del polígono
-						ctx.stroke();		/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
-						break;
-
-					case "Draw2":
-						ctx.lineTo(200, 200);
-						break;
-
-					case "Draw3":
-						ctx.lineTo(650, 600);
-						break;
-				}
-			}
-		}
-
-	}*/
-
-
-
-
-	//draw();
-
-
-
 
 //*******************************************************************************************
 // función principal (la introduzco para poder poner 'return' antes de que acabe)
@@ -483,13 +324,13 @@ function main()
 	 /// Añado las rotaciones a los vectores X e Y (y Action)
 	 for ( let i = 1; i < p; i++){   // cambiar 'var' por 'let'
 		 for ( let  j = 0; j < long_X_orig; j++){     // CUA usar 'X.length' en lugar de exactamente '6'
-			 let puntoRotado = {x:0, y:0};	      // En lugar de dejarlo como const lo he puesto con let, 
-			 				      // así si se añade color el punto sería (0,0), antes, con estas
-			 				      // condiciones salían números extraños (no se usaban, pero 
-			 				      // lo veo mejor así).
+			 let puntoRotado = {x:0, y:0};	      // En lugar de dejarlo como const lo he puesto con let,
+								// así si se añade color el punto sería (0,0), antes, con estas
+								// condiciones salían números extraños (no se usaban, pero
+								// lo veo mejor así).
 
-			 if (j != long_X_orig - 1)	// Cuando j == long_X_orig - 1	se añade el color al Action	
-			 	puntoRotado = rotatePoint(X[j], Y[j], Math.PI / 3 * i, centro0);  // const en lugar de 'var'
+			 if (j != long_X_orig - 1)	// Cuando sea Negro, se añade el punto (0,0)
+				puntoRotado = rotatePoint(X[j], Y[j], Math.PI / 3 * i, centro0);  // const en lugar de 'var'
 
 			 X.push(puntoRotado.x);
 			 Y.push(puntoRotado.y);
@@ -503,7 +344,7 @@ function main()
 
 
 
-		if (nLayers > 0){		/// Para poder dibujar solo la primera capa (la capa 0)
+		if (nLayers > 0){						/// Para poder dibujar solo la primera capa (la capa 0)
 		 /*RotateCenter = Identity;
 
 	   for (var i = 0; i < p; i++){
@@ -524,7 +365,7 @@ function main()
 
 				RotateVertex = matrixproduct(RotateQ, RotateVertex);
 			}
-		}*/	// Artículo de 1981
+		}*/					// Artículo de 1981
 
 		RotateCenter = Identity;
 
@@ -538,7 +379,7 @@ function main()
 				ReplicatePatern(RotateVertex, nLayers - 2, "Vertex");
 			}
 
-			RotateCenter = matrixproduct(RotateCenter, RotateP);	// Artículo de 1986
+			RotateCenter = matrixproduct(RotateCenter, RotateP);				// Artículo de 1986
 		}
 	}
 }
@@ -546,7 +387,23 @@ function main()
 //******************************************************************
 // llamada a la función principal
 
-main()
+main();
+		
+// Variables del artículo
+// https://www.researchgate.net/profile/Raymond_Tennant/publication/284240977_Constructing_Tessellations_and_Creating_Hyperbolic_Art/links/5650131f08aefe619b122d59/Constructing-Tessellations-and-Creating-Hyperbolic-Art.pdf
+let 		a = 1 - Math.tan(Math.PI / p) * Math.tan(Math.PI / q),				//// Variable de apoyo
+ 		s = Math.sqrt(a / (2 - a)),							//// Vértice hiperbólico
+		h = s / a;									//// Altura del centro del lado de un polígono
+		r = Math.sqrt(h * h / (Math.cos(Math.PI / p) * Math.cos(Math.PI / p)) - 1);	//// Radio de la circunferencia de un lado de un polígono
+
+
+let c = {x: linealTransformation(h, escala, centro.x), y: linealTransformation(h * Math.tan(Math.PI / p), escala, centro.y)};
+
+// Disco de Poincaré
+ctx.beginPath();
+ctx.arc(centro.x, centro.y, escala, 0, 2 * Math.PI, false);
+ctx.strokeStyle = 'Blue';
+ctx.stroke();
 
 
 </script>
